--- a/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/Mission/_MissionRating.cshtml
+++ b/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/Mission/_MissionRating.cshtml
@@ -10,5 +10,10 @@
         {
             <img src="/images/static/star.png" alt="star">
         }
-        (by @Model?.MissionRatingVM?.Count() volunteers)
-</div>
+        @if (Model?.MissionRatingVM?.Count() > 0)
+        {
+            <span>
+                (by @Model.MissionRatingVM.Count() volunteers)
+            </span>
+        }
+    </div>
