--- a/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/Shared/_Navbar.cshtml
+++ b/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/Shared/_Navbar.cshtml
@@ -33,7 +33,7 @@
                     <ul class="dropdown-menu dropdown-menu-end dropdown-menu-md-start">
                         <li><a class="dropdown-item" href="#">My Profile</a></li>
                         <li><a class="dropdown-item" href="#">Volunteer TimeSheet</a></li>
-                        <li><a asp-controller="User" asp-action="Logout" class="dropdown-item">Logout</a></li>
+                        <li><a id="logoutBtn" class="dropdown-item">Logout</a></li>
                     </ul>
                 </div>
             }else{
