--- a/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/Home/_IndexMissions.cshtml
+++ b/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/Home/_IndexMissions.cshtml
@@ -1,8 +1,8 @@
 @using CI_Platform.Entities.Constants
+@model List<MissionVM>
 @{
     var userId = Context.Session.GetString("UserId");
 }
-@model List<MissionVM>
 <input hidden value="@ViewBag.TotalMissions" id="totalMissions">
 <section class="index-grid-view row row-cols-1 row-cols-md-2 row-cols-lg-3 g-3">
     @foreach (MissionVM mission in Model)
@@ -39,7 +39,7 @@
                         </span>
                     }
                     else if (!string.IsNullOrEmpty(userId) && mission?.MissionApplicationVM?.LongCount() > 0 &&
-                    mission.MissionApplicationVM.Any(ma => ma.UserId == long.Parse(userId)))
+                    mission.MissionApplicationVM.Any(ma => ma.UserId == long.Parse(userId) && ma.ApprovalStatus == ApprovalStatus.APPROVED))
                     {
                         <span class="bg-success px-2 py-1 rounded-start rounded-pill position-absolute top-10 text-white text-14">
                             APPLIED
@@ -104,7 +104,7 @@
                                         }
                                         else
                                         {
-                                            <div>@mission.MissionApplicationVM.LongCount()</div>
+                                            <div>@mission.MissionApplicationVM.Where(ma => ma.ApprovalStatus == ApprovalStatus.APPROVED)?.LongCount()</div>
                                         }
                                         <div class="fw-light text-14">Already volunteered</div>
                                     </div>
@@ -131,7 +131,8 @@
                                         }
                                         else
                                         {
-                                            <div>@mission.MissionApplicationVM.LongCount()</div>
+                                            <div>@mission.MissionApplicationVM.Where(ma => ma.ApprovalStatus == ApprovalStatus.APPROVED)?.LongCount()</div>
+
                                         }
                                         <div class="fw-light text-14">Already volunteered</div>
                                     </div>
@@ -154,7 +155,7 @@
                                 var percentage = achieved * 100 / value;
                                 <div class="d-flex align-items-center gap-2 flex-grow-1">
                                     <img src="/images/static/achieved.png" alt="achieved">
-                                    <div class="w-100">
+                                    <div class="w-80">
                                         <div class="progress" role="progressbar" aria-label="Basic example"
                                  aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"
                                  style="height:0.5rem; width: 100%;">
@@ -170,7 +171,7 @@
                     <a href="#"
                    class="btn button d-flex gap-2 align-items-center mx-auto mt-3 width-max-conatent">
                         @if ((!string.IsNullOrEmpty(userId) && mission?.MissionApplicationVM?.LongCount() > 0 &&
-                       mission.MissionApplicationVM.Any(ma => ma.UserId == long.Parse(userId)))
+                       mission.MissionApplicationVM.Any(ma => ma.UserId == long.Parse(userId) && ma.ApprovalStatus == ApprovalStatus.APPROVED))
                        || mission.Status == MissionStatus.FINISHED
                        || mission?.SeatsLeft == 0
                        || mission?.RegistrationDeadline < DateTime.Now)
@@ -226,7 +227,7 @@
                         </span>
                     }
                     else if (!string.IsNullOrEmpty(userId) && mission?.MissionApplicationVM?.LongCount() > 0 &&
-                    mission.MissionApplicationVM.Any(ma => ma.UserId == long.Parse(userId)))
+                    mission.MissionApplicationVM.Any(ma => ma.UserId == long.Parse(userId) && ma.ApprovalStatus == ApprovalStatus.APPROVED))
                     {
                         <span class="bg-success px-2 py-1 rounded-start rounded-pill position-absolute top-10 text-white text-14">
                             APPLIED
@@ -287,7 +288,7 @@
                                             }
                                             else
                                             {
-                                                <div>@mission.MissionApplicationVM.LongCount()</div>
+                                                <div>@mission.MissionApplicationVM.Where(ma => ma.ApprovalStatus == ApprovalStatus.APPROVED)?.LongCount()</div>
                                             }
                                             <div class="fw-light text-14">Already volunteered</div>
                                         </div>
@@ -310,7 +311,8 @@
                                             }
                                             else
                                             {
-                                                <div>@mission.MissionApplicationVM.LongCount()</div>
+                                                <div>@mission.MissionApplicationVM.Where(ma => ma.ApprovalStatus == ApprovalStatus.APPROVED)?.LongCount()</div>
+
                                             }
                                             <div class="fw-light text-14">Already volunteered</div>
                                         </div>
@@ -366,7 +368,7 @@
                         <a href="#"
                        class="btn button d-flex gap-2 align-items-center">
                             @if ((!string.IsNullOrEmpty(userId) && mission?.MissionApplicationVM?.LongCount() > 0 &&
-                           mission.MissionApplicationVM.Any(ma => ma.UserId == long.Parse(userId)))
+                           mission.MissionApplicationVM.Any(ma => ma.UserId == long.Parse(userId) && ma.ApprovalStatus == ApprovalStatus.APPROVED))
                            || mission.Status == MissionStatus.FINISHED
                            || mission?.SeatsLeft == 0
                            || mission?.RegistrationDeadline < DateTime.Now)
