working on story

--- a/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/Shared/_RecommendToCoWorker.cshtml
+++ b/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/Shared/_RecommendToCoWorker.cshtml
@@ -1,7 +1,8 @@
 ﻿@model List<UserVM>
 @{
     long userId = ViewBag.UserId;
-    long missionId = ViewBag.MissionId;
+    long missionId = ViewBag?.MissionId;
+    long storyId = ViewBag?.StoryId;
 }
 <!-- modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
