--- a/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/Story/ShareStory.cshtml
+++ b/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/Story/ShareStory.cshtml
@@ -9,11 +9,18 @@
         <h2 class="color-darkgray fw-light mb-4">Share your Story</h2>
         <form asp-action="ShareStory" method="POST" class="d-flex flex-column gap-4 color-darkgray" id="ssForm" enctype="multipart/form-data">
             <input hidden value="@isDraft" name="isDraft" id="isDraft">
-            <input hidden value="@Model.StoryId" name="storyId"/>
+            @if (isDraft == "true")
+            {
+                @foreach (StoryMediaVM sm in Model.StoryMediaVM)
+                {
+                    <input hidden name="preLoaded" value="@sm.MediaName@sm.MediaType" data-type="@sm.MediaType" data-path="@sm.MediaPath@sm.MediaName@sm.MediaType"/>
+                }
+            }
+            <input hidden asp-for="StoryId" id="storyId"/>
             <div class="row row-cols-1 row-cols-md-2">
                 <div class="col">
                     <span> Select Mission </span>
-                    <select class="form-select" id="StoryMission" asp-for="MissionId">
+                    <select class="form-select" id="MissionId" asp-for="MissionId">
                         <option value="0" disabled selected>Select your mission</option>
                         @foreach (var mission in Model.MissionVMs)
                         {
@@ -23,50 +30,47 @@
                     <span asp-validation-for="MissionId" class="text-danger text-14"></span>
                 </div>
                 <div class="col">
-                    <label for="Title">My Story Title</label>
-                    <input type="text" class="form-control" id="Title" placeholder="Enter story title" asp-for="Title" />
+                    <label asp-for="Title">My Story Title</label>
+                    <input type="text" id="Title" class="form-control" placeholder="Enter story title" asp-for="Title" />
                     <span asp-validation-for="Title" class="text-danger text-14"></span>
                 </div>
+            </div>
+
+            <div>
+                <label asp-for="ShortDescription">Enter Short Description</label>
+                <input type="text" id="ShortDescription" asp-for="ShortDescription" class="form-control" placeholder="Enter short description"/>
+                <span asp-validation-for="ShortDescription" class="text-danger text-14"></span>
             </div>
 
             <!-- rich text editor -->
             <div>
                 <label>My Story</label>
                 <textarea id="tiny" asp-for="Description"></textarea>
-                <span id="DescriptionError" asp-validation-for="Description" class="text-danger text-14"></span>
+                <span id="DescriptionError" class="text-danger text-14"></span>
             </div>
             <div>
                 <label for="VideoUrl">Enter Video URL</label>
-                <input type="text" placeholder="Enter your URL" class="form-control" id="VideoUrl" asp-for="VideoUrl" />
+                <input type="text" placeholder="Enter your URL" class="form-control" asp-for="VideoUrl" />
                 <span asp-validation-for="VideoUrl" class="text-danger text-14"></span>
             </div>
 
             <div class="ss-dragndrop d-flex flex-column align-items-center justify-content-center border border-secondary border-dashed py-4 cursor-pointer">
                 <img src="/images/static/drag-and-drop.png" alt="drag" />
                 <input type="file" name="ssImagesInput" id="ssImagesInput" multiple hidden accept=".png, .jpg, .jpeg" />
-                <span class="text-danger text-14"></span>
+                <span id="mediaError" class="text-danger text-14"></span>
             </div>
-            <span id="MediaError" class="text-danger text-14"></span>
             <div class="ss-selected-images d-flex gap-2 gap-md-3 flex-wrap">
-                @foreach (var sm in Model.StoryMediaVM)
-                {
-                    <div class="position-relative">
-                        <img src="@sm.MediaPath@sm.MediaName@sm.MediaType" alt="story image" height="90px" width="90px" />
-                        <div class="position-absolute top-0 end-0 p-1 bg-dark cursor-pointer" data-media="@sm.StoryMediaId">
-                            <img src="/images/static/cross.png" alt="cross" height="10px" />
-                        </div>
-                    </div>
-                }
             </div>
             <div class="d-flex justify-content-between">
-                <a asp-for="StoryList" asp-controller="Story" class="btn border border-secondary rounded-pill color-darkgray">
+                <button id="cancelBtn" type="button" class="btn border border-secondary rounded-pill color-darkgray">
                     Cancel
-                </a>
+                </button>
                 <div>
-                    <button type="submit" value="save" name="action" class="btn button me-md-1">Save</button>
-                    <button type="submit" value="submit" name="action" class="btn button">Submit</button>
+                    <button type="submit" value="save" class="btn button me-md-1">Save</button>
+                    <button type="submit" value="submit" class="btn button">Submit</button>
                 </div>
             </div>
+            <input hidden id="action" name="action" />
         </form>
     </section>
     <partial name="_Footer"></partial>
