--- a/MVC/CI-Platform/CI-PlatformWeb/Views/Shared/_Layout.cshtml
+++ b/MVC/CI-Platform/CI-PlatformWeb/Views/Shared/_Layout.cshtml
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/style.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/CI_PlatformWeb.styles.css" asp-append-version="true" />
+    @*<link rel="stylesheet" href="~/CI_PlatformWeb.styles.css" asp-append-version="true" />*@
+    <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
 </head>
 <body>
     @RenderBody()
@@ -15,7 +16,6 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
