--- a/MVC/CI-Platform/CI-PlatformWeb/wwwroot/css/style.css
+++ b/MVC/CI-Platform/CI-PlatformWeb/wwwroot/css/style.css
@@ -415,3 +415,15 @@ form input:focus {
         display: flex !important;
     }
 }
+
+/* my profile page */
+.profile-top {
+    width: 330px;
+}
+.active-skill {
+    background-color: rgb(224, 224, 224);
+}
+
+.skillBtn:hover {
+    background-color: lightgray;
+}
